unpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <label>LinkedIn</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email_disturbance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>settings in community</description>
        <label>email_disturbance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>email_news__c</fullName>
        <defaultValue>false</defaultValue>
        <description>settings in community</description>
        <label>email_news</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>